--- a/compiler/miri/Dockerfile
+++ b/compiler/miri/Dockerfile
@@ -1,4 +1,5 @@
-FROM shepmaster/rust-nightly:sources
+ARG base_image=shepmaster/rust-nightly:sources
+FROM ${base_image}
 
 RUN rustup component add rust-src miri
 
